--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
             </div>
         </nav>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-12">
                 <h1>
                     CREATIVITY DOESN’T WAIT FOR THAT PERFECT MOMENT.
                 </h1>
-                <p>It fashions its own perfect moments out of ordinary ones</p>
+                <p class="paragraph">It fashions its own perfect moments out of ordinary ones</p>
                 <button type="button" class="btn btn-outline-primary btn-sm">LEARN MORE</button>
                 <button type="button" class="btn btn-light btn-sm">SIGN UP</button>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-12 adj-image">
                 <img class="image" src="iphone-image.png" alt="creativelogo">
                 <!-- <img class="image" src="creativity-removebg-preview.png" alt="creativelogo"> -->
             </div>
